--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,11 @@
 		<java.version>21</java.version>
 	</properties>
 	<dependencies>
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-core</artifactId>
+			<scope>test</scope>
+		</dependency>
 		<!-- 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -112,14 +117,14 @@
 		</dependency>
 		-->
 
-		
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-security</artifactId>
 		</dependency>
-		
+
 		<!-- new dependencies -->
-		 
+
 		<dependency>
 			<groupId>javax.servlet</groupId>
 			<artifactId>javax.servlet-api</artifactId>
@@ -142,7 +147,7 @@
 			<version>0.12.5</version>
 			<scope>runtime</scope>
 		</dependency>
-
+		
 		<!-- what is this dependency dont know search it found it in pulkit
 		github code-->
 		<!-- 
@@ -150,6 +155,10 @@
 			<groupId>net.minidev</groupId>
 			<artifactId>accessors-smart</artifactId>
 			<version>2.5.1</version>
+		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.datatype</groupId>
+			<artifactId>jackson-datatype-jsr310</artifactId>
 		</dependency>
 		-->
 
