--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 spring.application.name=dabms
 
+logging.level.org.springframework=DEBUG
+
 spring.jpa.show-sql=true
 spring.datasource.url=jdbc:mysql://localhost:3306/testDB
 spring.datasource.username=root
